--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -645,4 +645,9 @@
     <string-array name="config_deviceKeyHandlerClasses" translatable="false">
         <item>me.superioros.keyhandler.KeyHandler</item>
     </string-array>
+
+    <!-- Enables or disables haptic effect when the text insertion/selection handle is moved
+          manually by the user. Off by default, since the expected haptic feedback may not be
+          available on some devices. -->
+    <bool name="config_enableHapticTextHandle">true</bool>
 </resources>
